fixed save button to be center aligned

--- a/style.css
+++ b/style.css
@@ -70,3 +70,10 @@ textarea {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+.btn {
+  line-height: 0;
+}
+
+
+
